index.html must contain at least a <html> and <head> element

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html><head></head>
   <body>
     <div id="widget"></div>
     <a onclick="displayFolded('/');"}>/ <- click me</a><ul id="/"></ul>
